--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <body>
     <ul class='pokemon-list'></ul>
     <div id='modal-container'></div>
+    <button id='show-modal'>
+      Show modal
+    </button>
     <script src="js/promise-polyfill.js"></script>
     <script src="js/fetch.umd.js"></script>
     <script src="js/scripts.js"></script>
