--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <title>Simple JS App</title>
   </head>
-  <body>
+    <h2> POKEDOX </h2>
     <ul class='pokemon-list'></ul>
     <div id='modal-container'></div>
     <button id='show-modal'>
